# real_vs_fake_news

./: .dockerignore  Dockerfile.frontend  app.py  docker-compose.yml  main.py  pyproject.toml
api/: Dockerfile  main.py
data/datasets/FakeNewsNet/processed/: fakenews.csv
data/datasets/LIARFakeNewsDataset/processed/: liar_data.csv
models/: classifier.joblib
notebook/: LogisticRegression_cv_results.npz  RandomForest_cv_results.npz  SVM_Linear_cv_results.npz  fake-news-detection.ipynb  truthguard.ipynb
src/scripts/: data_cleaning.py  preprocessor.py  training.py
src/utils/: utils.py
streamlit/: Dockerfile  app.py
